# ffmpeg_transcode

./: .gitignore  1_bootstramp.bat  1_bootstramp.sh  2_configure.bat  2_configure.sh  3_build.bat  3_build.sh  CMakeLists.txt  README.md  build.py  vcpkg-configuration.json  vcpkg.json
container/: Dockerfile  build.sh
scripts/: 0.init.x64-linux.ubuntu.sh  0.init.x64-windows-static.bat  1.cfg.cmake.x64-linux.txt  1.cfg.cmake.x64-windows-static.txt  2.gen.cmake.x64-linux.sh  2.gen.cmake.x64-windows-static.bat  3.build.cmake.x64-linux.sh  3.build.cmake.x64-windows-static.bat  ffmpeg_transcode_cli.py  ffmpeg_transcode_cli.sh
src/: CMakeLists.txt  ffmpeg_decode.hpp  ffmpeg_demux.hpp  ffmpeg_encode.cpp  ffmpeg_encode.hpp  ffmpeg_scale.hpp  ffmpeg_transcode.cpp  ffmpeg_transcode.hpp  ffmpeg_types.cpp  ffmpeg_types.hpp  string_utils.cpp
src/ffmepg_transcode/: CMakeLists.txt  ffmpeg_decode.cpp  ffmpeg_decode.hpp  ffmpeg_demux.cpp  ffmpeg_demux.hpp  ffmpeg_encode.cpp  ffmpeg_encode.hpp  ffmpeg_filter.cpp  ffmpeg_filter.hpp  ffmpeg_scale.cpp  ffmpeg_scale.hpp  ffmpeg_transcode.cpp  ffmpeg_transcode.hpp  ffmpeg_types.cpp  ffmpeg_types.hpp  ffmpeg_utils.cpp  ffmpeg_utils.hpp  main.cpp  math_utils.cpp  math_utils.hpp  string.utils.hpp  string_utils.cpp  string_utils.hpp
